1.1 - 
----------------
NEW FEATURES:
- Added dashboard widget with personal timesheet summary. (Alex Pagnoni)
- Added log work form. (Alex Pagnoni)



1.0 - 2014/01/06
----------------
- First release.