@@ -1,6 +1,7 @@
 timesheet.title             = Timesheet
 log_work.title              = Log work
 
+timesheet.button            = Timesheet
 log_work.button             = Log work
 
 date.header                 = Date
