@@ -1,0 +1,30 @@
+weekday_1.label             = Monday
+weekday_2.label             = Tuesday
+weekday_3.label             = Wednesday
+weekday_4.label             = Thursday
+weekday_5.label             = Friday
+weekday_6.label             = Saturday
+weekday_7.label             = Sunday
+
+weekday_short_1.label             = M
+weekday_short_2.label             = T
+weekday_short_3.label             = W
+weekday_short_4.label             = T
+weekday_short_5.label             = F
+weekday_short_6.label             = S
+weekday_short_7.label             = S
+
+month_1.label               = January
+month_2.label               = February
+month_3.label               = March
+month_4.label               = April
+month_5.label               = May
+month_6.label               = June
+month_7.label               = July
+month_8.label               = August
+month_9.label               = September
+month_10.label              = October
+month_11.label              = November
+month_12.label              = December
+
+hours.label                 = %s hours
