@@ -1,6 +1,7 @@
 timesheet.title             = Timesheet
 log_work.title              = Registra lavoro
 
+timesheet.button            = Timesheet
 log_work.button             = Registra lavoro
 
 date.header                 = Data
