@@ -1,0 +1,30 @@
+weekday_1.label             = Lunedì
+weekday_2.label             = Martedì
+weekday_3.label             = Mercoledì
+weekday_4.label             = Giovedì
+weekday_5.label             = Venerdì
+weekday_6.label             = Sabato
+weekday_7.label             = Domenica
+
+weekday_short_1.label             = L
+weekday_short_2.label             = M
+weekday_short_3.label             = M
+weekday_short_4.label             = G
+weekday_short_5.label             = V
+weekday_short_6.label             = S
+weekday_short_7.label             = D
+
+month_1.label               = Gennaio
+month_2.label               = Febbraio
+month_3.label               = Marzo
+month_4.label               = Aprile
+month_5.label               = Maggio
+month_6.label               = Giugno
+month_7.label               = Luglio
+month_8.label               = Agosto
+month_9.label               = Settembre
+month_10.label              = Ottobre
+month_11.label              = Novembre
+month_12.label              = Dicembre
+
+hours.label                 = %s ore
