@@ -62,5 +62,8 @@
             title="mytimesheet"
             class="\\Shared\\Dashboard\\InnoworkMyTimesheetDashboardWidget" />
 
+        <wuiwidget name="innoworktimesheetcalendar"
+            file="WuiInnoworktimesheetcalendar.php" />
+
 	</components>
 </application>
