@@ -3,6 +3,7 @@
 NEW FEATURES:
 - Added dashboard widget with personal timesheet summary. (Alex Pagnoni)
 - Added log work form. (Alex Pagnoni)
+- Added user timesheet monthly calendar view. (Alex Pagnoni)
 
 
 
